--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -120,6 +120,12 @@
   class = abbr
 }
 
+\DeclareAcronym{abs}{
+  short = \tsc{abs} ,
+  long  = absolutive ,
+  class = abbr
+}
+
 \DeclareAcronym{def}{
   short = \tsc{def} ,
   long  = definite ,
@@ -129,6 +135,12 @@
 \DeclareAcronym{rel}{
   short = \tsc{rel} ,
   long  = relativizer ,
+  class = abbr
+}
+
+\DeclareAcronym{aux}{
+  short = \tsc{aux} ,
+  long  = auxiliary ,
   class = abbr
 }
 
